[package]
name = "bootloader_uefi"
version = "0.1.0"
authors = ["Jan Katzer <jan@katzer.dev>"]
edition = "2018"

[profile.dev]
opt-level = 1

[dependencies]
newefi = {path = "../libs/newefi/"}
prebootlib = {path = "../libs/prebootlib/"}
uefi_rs = {package = "uefi", version = "0.7.0", default-features = false, features = []}
atomic = "0.5.0"
#parking_lot = "0.11.1"
elf_rs = "0.1.3"
fallo = {path = "../../fallo/"}
num-integer = {version = "0.1.44", default-features = false}
